--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   </style>
 </head>
 <body>
-  <main class="principal"></main>
+  <main class="principal"> 
+    
+  </main>
   Collections
   Men
   Women
